feat: atualiza mapeamento de Project para usar List.of() e corrige nome do método de atualização para 'getUpdatedAt'